correction contraste lightbox

--- a/style.css
+++ b/style.css
@@ -635,7 +635,7 @@ a[data-lightbox]:hover img {
 
 .snapshot-lb .lightbox-caption {
     padding: 0;
-    color: rgba(0, 0, 0, 0.897);
+    color: rgb(0, 0, 0);
     background: none;
 }
 
